[package]
name = "hello"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "add"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.44"
ssvm-wasi-helper = "=0.1.0"
ssvm_tensorflow_interface = "^0.1.3"
