[package]
name = "food_classify"
version = "0.1.0"
authors = ["wangshishuo <wangshishuo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge_tensorflow_interface = "0.2.0"
urlencoding = "1.0.0"
ssvm-wasi-helper = "=0.1.0"
